--- a/src/components/buttons/HireMeButton/hireMe.css
+++ b/src/components/buttons/HireMeButton/hireMe.css
@@ -5,7 +5,7 @@
 }
 
 .hire-me::after, .hire-me::before {
-    background-image: conic-gradient(from var(--angle) ,transparent 1%, white);
+    background-image: conic-gradient(from var(--angle) ,transparent 1%, #166534);
     animation: 2s spin linear infinite;
 }
 
